--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>router.spec</title>
-  <script src="../bower_components/web-component-tester/browser.js"></script>
-  <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <script src="../dist/umd/vaadin-router.js"></script>
+  <script src="../../bower_components/web-component-tester/browser.js"></script>
+  <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../../dist/umd/vaadin-router.js"></script>
 </head>
 
 <body>
@@ -690,38 +690,6 @@
 
             expect(outlet.children[0].tagName).to.match(/x-users-view/i);
           });
-        });
-      });
-
-      describe('dynamic rerouting', () => {
-        let router;
-        beforeEach(() => {
-          router = new Vaadin.Router(outlet);
-        });
-
-        afterEach(() => {
-          router.unsubscribe();
-        });
-
-        it('active routes', async() => {
-          router.setRoutes([
-            {path: '/', component: 'x-home-view'},
-            {path: '/users',
-              children: [
-                {path: '/', component: 'x-user-list'},
-                {path: '/:user', component: 'x-user-profile', inactivate: () => console.log('!2!!')}
-              ]
-            },
-            {path: '/test', component: 'x-home-view'},
-          ]);
-
-          await router.render('/users/Kim');
-
-          expect(router.__activeRoutes.map(route => route.path)).to.deep.equal(['/users', '/:user']);
-
-          await router.render('/test');
-
-          expect(router.__activeRoutes.map(route => route.path)).to.deep.equal(['/test']);
         });
       });
     });
