Fix typos in demos

--- a/demo/vaadin-router-basic-demos.html
+++ b/demo/vaadin-router-basic-demos.html
@@ -34,7 +34,7 @@
       through the routes until it finds the first match, creates an instance
       of the route component, and inserts it into the router outlet (replacing
       any pre-existing outlet content). For details on the route path syntax
-      see the <a href="#vaadin-router-route-parameters-demos">Router Parameters
+      see the <a href="#vaadin-router-route-parameters-demos">Route Parameters
       </a> demos.</p>
     <p>Route components can be any Web Components regardless of how they are
       built: vanilla JavaScript, Polymer, Stencil, SkateJS, Angular, Vue, etc</p>
@@ -60,7 +60,7 @@
     <h3>Child Routes</h3>
     <p>Each route can have child routes, which makes it easier to group related
       routes together under a common parent. This is optional, i.e. the same
-      routes config can be expressed as a flat list, or as a parent-childern
+      routes config can be expressed as a flat list, or as a parent-children
       tree. The routes config in the example below is effectively the same as in
       the example above.</p>
     <p>The leading <code>'/'</code> in child route paths is optional&mdash;they
