--- a/demo/vaadin-router-lazy-loading-demos.html
+++ b/demo/vaadin-router-lazy-loading-demos.html
@@ -16,14 +16,14 @@
     <p>
       Note: If the bundle URL does not end with <code>.js</code> nor with <code>
       .mjs</code>, Vaadin.Router throws an <code>Error</code> and does not
-      attempt to loaded the bundle. Use a custom route action as shown in the
+      attempt to load the bundle. Use a custom route action as shown in the
       next demo if you need to load different types of the bundles.
     </p>
     <p>
       This demo shows how to load the <code>component-definition.js</code>
       script which defines the custom element for the <code>/lazy</code> route.
       Check the network tab in the browser DevTools to see that the script is
-      loaded only after clickig at the <code>/lazy</code> route link.
+      loaded only after clicking at the <code>/lazy</code> route link.
     </p>
     <vaadin-demo-snippet id="vaadin-router-lazy-loading-1" iframe-src="iframe.html">
       <template preserve-content>
