--- a/demo/vaadin-router-route-parameters-demos.html
+++ b/demo/vaadin-router-route-parameters-demos.html
@@ -15,7 +15,7 @@
       </code> and <code>42</code> are the parameter values.</p>
     <p>Route parameters are defined using an express.js-like syntax. The
       implementation is based on the <a href="https://github.com/pillarjs/path-to-regexp#parameters"
-      target="_blank" rel="noopener">path-ot-regexp</a> library that is commonly
+      target="_blank" rel="noopener">path-to-regexp</a> library that is commonly
       used in modern front-end libraries and frameworks. All features are
       supported:
       <ul>
