--- a/test/router/dynamic.redirect.spec.html
+++ b/test/router/dynamic.redirect.spec.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-  <a id="admin-anchor" href="/admin"></a>
   <test-fixture id="outlet">
     <template>
       <div></div>
@@ -143,19 +142,17 @@
         });
 
         it('inactivate is called on deactivation and does not interrupt render if returns no value', async() => {
-          let inactivateCalled = false;
+          const inactivate = sinon.spy();
           router.setRoutes([
-            {path: '/a', component: 'x-home-view', inactivate: () => {
-              inactivateCalled = true;
-            }},
+            {path: '/a', component: 'x-home-view', inactivate: inactivate},
             {path: '/b', component: 'x-users-view'},
           ]);
 
           await router.render('/a');
-          expect(inactivateCalled).to.equal(false);
+          expect(inactivate).to.not.have.been.called;
 
           await router.render('/b');
-          expect(inactivateCalled).to.equal(true);
+          expect(inactivate).to.have.been.called.once;
           expect(outlet.children[0].tagName).to.match(/x-users-view/i);
           verifyActiveRoutes(router, ['/b']);
         });
@@ -173,7 +170,6 @@
           await router.render(lastResolvedRoute);
 
           expect(inactivateFunction).to.have.been.called.once;
-          expect(inactivateFunction.args.length).to.equal(1);
           expect(inactivateFunction.args[0].length).to.equal(1);
           const contextParam = inactivateFunction.args[0][0];
           expect(contextParam.pathname).to.equal(lastResolvedRoute);
