Track active state of routes (#126)
Fixes #22

---

* Store visited routes in the context
* Write active routes to the Router object field.
* Separate dynamic redirect tests.
* Add warning about useless inactivate.
* Update docs
* Add info about inactivated route to the context.

--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>router.spec</title>
-  <script src="../bower_components/web-component-tester/browser.js"></script>
-  <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <script src="../dist/umd/vaadin-router.js"></script>
+  <script src="../../bower_components/web-component-tester/browser.js"></script>
+  <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../../dist/umd/vaadin-router.js"></script>
 </head>
 
 <body>
