--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -680,6 +680,20 @@
             expect(outlet.children[0].tagName).to.match(/x-users-view/i);
           });
 
+          it('action can redirect by using the context method', async() => {
+            router.setRoutes([
+              {path: '/users/:id', action: context => context.redirect('/user/:id')},
+              {path: '/user/:id', component: 'x-users-view'},
+            ]);
+
+            await router.render('/users/1');
+
+            const elem = outlet.children[0];
+            expect(elem.tagName).to.match(/x-users-view/i);
+            expect(elem.route.params).to.be.object;
+            expect(elem.route.params.id).to.equal('1');
+          });
+
           it('redirect should be executed before bundle and stop it from loading', async() => {
             router.setRoutes([
               {path: '/test', redirect: '/users', component: 'x-home-view'},
