--- a/demo/vaadin-router-route-actions-demos.html
+++ b/demo/vaadin-router-route-actions-demos.html
@@ -36,6 +36,8 @@
         <li><code>context.next</code> [function] proceed to resolving the next
           matching route (if any)</li>
         <li><code>context.redirect(path)</code> [function] redirect to the path specified</li>
+        <li><code>context.render(component)</code> [function] that calls
+          <code>Router.renderComponent(component, context)</code> with current context</li>
       </ul>
       The supported return values are
       <ul>
@@ -182,6 +184,48 @@
             // current route parameters are automatically transferred to redirect target
             {path: '/employees/:user', action: redirect},
             {path: '/users/:user', component: 'x-user-profile'},
+          ]);
+        </script>
+      </template>
+    </vaadin-demo-snippet>
+
+    <h3>Returning custom element as an action result</h3>
+    <p>
+      Another thing that <code>action()</code> can do with <code>context</code>
+      parameter is to create a custom element with current context.
+      All the parameters in current context will be passed to the rendered element.
+    </p>
+    <p>
+      Note: If the only thing your action does is custom element creation, it can
+      be replaced with <code>component</code> property of the route.
+      See <a href="#vaadin-router-basic-demos">Basic demos</a> section for examples.
+    </p>
+    <vaadin-demo-snippet id="vaadin-router-route-actions-demo-4" iframe-src="iframe.html">
+      <template preserve-content>
+        <nav>
+          <a href="/">Home</a>
+          <a href="/users/Kim">Renders stub page</a>
+          <a href="/users/admin">Renders user info page</a>
+        </nav>
+        <div id="outlet"></div>
+        <script type="module">
+          // import {Router} from '@vaadin/router';
+          const {Router} = window.Vaadin;
+
+          const render = context => {
+            if (context.params.user === 'admin') {
+              return context.render('x-user-profile');
+            }
+            const stubElement = context.render('h3');
+            stubElement.innerHTML = 'Access denied';
+            return stubElement;
+          };
+
+          const router = new Router(document.getElementById('outlet'));
+          router.setRoutes([
+            {path: '/', component: 'x-home-view'},
+            // current route parameters are automatically transferred to rendered element
+            {path: '/users/:user', action: render},
           ]);
         </script>
       </template>
