--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -694,6 +694,19 @@
             expect(elem.route.params.id).to.equal('1');
           });
 
+          it('action can render components by using the context method', async() => {
+            router.setRoutes([
+              {path: '/users/:id', action: context => context.render('x-users-view')},
+            ]);
+
+            await router.render('/users/1');
+
+            const elem = outlet.children[0];
+            expect(elem.tagName).to.match(/x-users-view/i);
+            expect(elem.route.params).to.be.object;
+            expect(elem.route.params.id).to.equal('1');
+          });
+
           it('redirect should be executed before bundle and stop it from loading', async() => {
             router.setRoutes([
               {path: '/test', redirect: '/users', component: 'x-home-view'},
