--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@
   <script src="../bower_components/web-component-tester/browser.js"></script>
   <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="test-suites.js"></script>
-  <script src="../dist/umd/vaadin-router.js"></script>
+  <script src="../dist/vaadin-router.umd.js"></script>
 </head>
 
 <body>
