--- a/test/router/dynamic.redirect.spec.html
+++ b/test/router/dynamic.redirect.spec.html
@@ -5,7 +5,7 @@
   <title>router.spec</title>
   <script src="../../bower_components/web-component-tester/browser.js"></script>
   <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <script src="../../dist/umd/vaadin-router.js"></script>
+  <script src="../../dist/vaadin-router.umd.js"></script>
 </head>
 
 <body>
