Code review fixes.

--- a/demo/vaadin-router-route-actions-demos.html
+++ b/demo/vaadin-router-route-actions-demos.html
@@ -149,7 +149,7 @@
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Redirecting from an action</h3>
+    <h3>Redirecting From An Action</h3>
     <p>
       <code>action()</code> can use its <code>context</code> parameter to influence
       the route resolution result.
@@ -160,7 +160,7 @@
     </p>
     <p>
       Note: If you need only to redirect to another route, defining an action might be an overkill.
-      More convenient way is described in <a href="#vaadin-router-redirect-demos">Router redirect</a> section.
+      More convenient way is described in <a href="#vaadin-router-redirect-demos">Redirects</a> section.
     </p>
     <vaadin-demo-snippet id="vaadin-router-route-actions-demo-3" iframe-src="iframe.html">
       <template preserve-content>
@@ -190,7 +190,7 @@
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Returning custom element as an action result</h3>
+    <h3>Returning Custom Element As An Action Result</h3>
     <p>
       Another thing that <code>action()</code> can do with <code>context</code>
       parameter is to create a custom element with current context.
@@ -199,7 +199,7 @@
     <p>
       Note: If the only thing your action does is custom element creation, it can
       be replaced with <code>component</code> property of the route.
-      See <a href="#vaadin-router-basic-demos">Basic demos</a> section for examples.
+      See <a href="#vaadin-router-basic-demos">Getting Started</a> section for examples.
     </p>
     <vaadin-demo-snippet id="vaadin-router-route-actions-demo-4" iframe-src="iframe.html">
       <template preserve-content>
