Code review fixes.

--- a/demo/vaadin-router-route-actions-demos.html
+++ b/demo/vaadin-router-route-actions-demos.html
@@ -149,7 +149,7 @@
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Redirecting From An Action</h3>
+    <h3>Redirecting From an Action</h3>
     <p>
       <code>action()</code> can use its <code>context</code> parameter to influence
       the route resolution result.
@@ -190,7 +190,7 @@
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Returning Custom Element As An Action Result</h3>
+    <h3>Returning Custom Element As an Action Result</h3>
     <p>
       Another thing that <code>action()</code> can do with <code>context</code>
       parameter is to create a custom element with current context.
