--- a/test/router/dynamic.redirect.spec.html
+++ b/test/router/dynamic.redirect.spec.html
@@ -119,7 +119,7 @@
 
         it('action that returns custom component does not activate route', async() => {
           router.setRoutes([
-            {path: '/', action: context => Vaadin.Router.renderComponent('x-home-view', context)},
+            {path: '/', action: context => context.component('x-home-view')},
           ]);
 
           await router.render('/');
@@ -129,9 +129,7 @@
 
         it('action that returns redirect activates redirect route', async() => {
           router.setRoutes([
-            {path: '/', action: () => {
-              return {redirect: {pathname: '/a', from: '/'}};
-            }},
+            {path: '/', action: context => context.redirect('/a')},
             {path: '/a', component: 'x-users-view'},
           ]);
 
