--- a/demo/vaadin-router-lazy-loading-demos.html
+++ b/demo/vaadin-router-lazy-loading-demos.html
@@ -28,7 +28,7 @@
     <vaadin-demo-snippet id="vaadin-router-lazy-loading-1" iframe-src="iframe.html">
       <template preserve-content>
         <a href="/">Home</a>
-        <a href="/lazy">Lazy load bundle</a>
+        <a href="/user/guest">User Profile</a>
         <div id="outlet"></div>
         <script type="module">
           // import {Router} from '@vaadin/router';
@@ -38,16 +38,16 @@
           router.setRoutes([
             {path: '/', component: 'x-home-view'},
             {
-              path: '/lazy',
-              bundle: `${window.Vaadin.demoComponentsRoot}/component-definition.js`,
-              component: 'x-bundle-test-view' // <-- defined in the bundle
+              path: '/user/:id',
+              bundle: `${window.Vaadin.demoComponentsRoot}/user.bundle.js`,
+              component: 'x-user-js-bundle-view' // <-- defined in the bundle
             },
           ]);
         </script>
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Lazy Loading non-JS Bundles</h3>
+    <h3>Lazy Loading non-JS Bundles, e.g. HTML Imports</h3>
     <p>
       In cases when loading <code>.js</code> and <code>.mjs</code> is not
       enough&mdash;most notably, when using HTML imports in Polymer-based
@@ -64,26 +64,30 @@
     <vaadin-demo-snippet id="vaadin-router-lazy-loading-2" iframe-src="iframe.html">
       <template preserve-content>
         <a href="/">Home</a>
-        <a href="/lazy">Lazy load custom bundle</a>
+        <a href="/user/admin">User Profile</a>
         <div id="outlet"></div>
         <script type="module">
           // import {Router} from '@vaadin/router';
           const {Router} = window.Vaadin;
 
-          const loadCustomBundle = () => {
+          const loadCustomBundle = (context) => {
             return new Promise((resolve, reject) => {
               // This is one way of loading a bundle lazily (works for Polymer apps).
               // Other apps might use different ways.
               Polymer.importHref(
-                `${window.Vaadin.demoComponentsRoot}/component-definition.html`, () => resolve(), reject, true);
+                `${window.Vaadin.demoComponentsRoot}/user.bundle.html`, () => {
+                  resolve(context.component(context.route.component));
+                },
+                reject,
+                true
+              );
             });
           };
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
             {path: '/', component: 'x-home-view'},
-            {path: '/lazy', action: loadCustomBundle},
-            {path: '/lazy', component: 'x-bundle-custom-test'},
+            {path: '/user/:id', action: loadCustomBundle, component: 'x-user-html-bundle-view'}
           ]);
         </script>
       </template>
