Add HTML import for Polymer.importHref to lazy load demo

--- a/demo/vaadin-router-lazy-loading-demos.html
+++ b/demo/vaadin-router-lazy-loading-demos.html
@@ -63,6 +63,7 @@
     </p>
     <vaadin-demo-snippet id="vaadin-router-lazy-loading-2" iframe-src="iframe.html">
       <template preserve-content>
+        <link rel="import" href="../../polymer/lib/utils/import-href.html">
         <a href="/">Home</a>
         <a href="/user/admin">User Profile</a>
         <div id="outlet"></div>
