--- a/test/router/dynamic.redirect.spec.html
+++ b/test/router/dynamic.redirect.spec.html
@@ -393,6 +393,357 @@
           expect(outlet.children[0].tagName).to.match(/x-home-view/i);
         });
 
+        it('onBeforeEnter with redirect has its context.from and redirect.from populated correctly', async() => {
+          router.setRoutes([
+            {path: '/a', children: [
+              {path: '/b', children: [
+                {path: '/c', action: onBeforeEnterAction('whatever', redirectFunction)}
+              ]},
+            ]},
+            {path: '/d', component: 'x-home-view', action: verificationAction}
+          ]);
+
+          await router.render(from);
+
+          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+        });
+
+        it('onBeforeLeave with redirect has its context.from and redirect.from populated correctly', async() => {
+          router.setRoutes([
+            {path: '/a', children: [
+              {path: '/b', children: [
+                {path: '/c', action: onBeforeLeaveAction('x-users-list', redirectFunction)}
+              ]},
+            ]},
+            {path: '/d', component: 'x-home-view', action: verificationAction},
+            {path: '/e', component: 'x-users-list'},
+          ]);
+
+          await router.render(from);
+          await router.render('/e');
+
+          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+        });
+      });
+
+      describe('onBeforeEnter and onBeforeLeave', () => {
+        let router;
+        beforeEach(() => {
+          router = new Vaadin.Router(outlet);
+        });
+
+        afterEach(() => {
+          router.unsubscribe();
+        });
+
+        it('onBeforeEnter is called with correct parameters', async() => {
+          const onBeforeEnter = sinon.spy();
+          router.setRoutes([
+            {path: '/', action: onBeforeEnterAction('x-home-view', onBeforeEnter)}
+          ]);
+
+          await router.render('/');
+
+          expect(onBeforeEnter).to.have.been.called.once;
+          expect(onBeforeEnter.args[0].length).to.equal(1);
+          const contextParam = onBeforeEnter.args[0][0];
+          expect(contextParam.pathname).to.equal('/');
+          expect(contextParam.route.path).to.equal('/');
+
+          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+        });
+
+        it('onBeforeEnter.this points to the route that defines the component', async() => {
+          router.setRoutes([
+            {path: '/', action: onBeforeEnterAction('x-home-view', function(context) {
+              // eslint-disable-next-line no-invalid-this
+              expect(this.path).to.equal('/');
+              // eslint-disable-next-line no-invalid-this
+              expect(this).to.be.equal(context.route);
+            })},
+          ]);
+
+          await router.render('/');
+
+          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+        });
+
+        it('onBeforeLeave is called with correct parameters', async() => {
+          const onBeforeLeave = sinon.spy();
+          router.setRoutes([
+            {path: '/', action: onBeforeLeaveAction('x-home-view', onBeforeLeave)},
+            {path: '/users', component: 'x-users-list'},
+          ]);
+
+          await router.render('/');
+          expect(onBeforeLeave).to.not.have.been.called;
+
+          await router.render('/users');
+
+          expect(onBeforeLeave).to.have.been.called.once;
+          expect(onBeforeLeave.args[0].length).to.equal(1);
+          const contextParam = onBeforeLeave.args[0][0];
+          expect(contextParam.pathname).to.equal('/');
+          expect(contextParam.route.path).to.equal('/');
+
+          expect(outlet.children[0].tagName).to.match(/x-users-list/i);
+        });
+
+        it('onBeforeLeave.this points to the route that defines the component', async() => {
+          router.setRoutes([
+            {path: '/', action: onBeforeLeaveAction('x-home-view', function(context) {
+              // eslint-disable-next-line no-invalid-this
+              expect(this.path).to.equal('/');
+              // eslint-disable-next-line no-invalid-this
+              expect(this).to.be.equal(context.route);
+            })},
+            {path: '/users', component: 'x-users-list'},
+          ]);
+
+          await router.render('/');
+          await router.render('/users');
+
+          expect(outlet.children[0].tagName).to.match(/x-users-list/i);
+        });
+
+        it('action, onBeforeEnter and onBeforeLeave are called in correct order', async() => {
+          let invocations = [];
+          router.setRoutes([
+            {
+              path: '/',
+              action: context => {
+                const component = context.component('x-home-view');
+                component.onBeforeLeave = () => {
+                  invocations.push('onBeforeLeave');
+                };
+                component.onBeforeEnter = () => {
+                  invocations = [];
+                  invocations.push('onBeforeEnter');
+                };
+                return component;
+              },
+              inactivate: () => {
+                invocations.push('inactivate');
+              }
+            },
+            {path: '/users', component: 'x-users-list', action: () => {
+              invocations.push('action');
+            }},
+          ]);
+
+          await router.render('/');
+          expect(invocations).to.deep.equal(['onBeforeEnter']);
+
+          await router.render('/users');
+          expect(invocations).to.deep.equal(['onBeforeEnter', 'onBeforeLeave', 'action']);
+        });
+
+        it('when onBeforeEnter returns an HTMLElement, the element is rendered and now route is activated', async() => {
+          router.setRoutes([
+            {path: '/', action: onBeforeEnterAction('whatever', context => context.component('x-users-list'))}
+          ]);
+
+          await router.render('/');
+
+          expect(outlet.children[0].tagName).to.match(/x-users-list/i);
+          verifyActiveRoutes(router, []);
+        });
+
+        it('when onBeforeLeave returns an HTMLElement, the element is rendered and activation chain is not changed', async() => {
+          router.setRoutes([
+            {path: '/', action: onBeforeLeaveAction('x-home-view', context => context.component('x-users-list'))},
+            {path: '/test', component: 'whatever'}
+          ]);
+
+          await router.render('/');
+          await router.render('/test');
+
+          expect(outlet.children[0].tagName).to.match(/x-users-list/i);
+          verifyActiveRoutes(router, []);
+        });
+
+        it('when onBeforeEnter returns a redirect, the redirect target is rendered and activated', async() => {
+          router.setRoutes([
+            {path: '/', action: onBeforeEnterAction('whatever', context => context.redirect('/users'))},
+            {path: '/users', component: 'x-users-list'}
+          ]);
+
+          await router.render('/');
+
+          expect(outlet.children[0].tagName).to.match(/x-users-list/i);
+          verifyActiveRoutes(router, ['/users']);
+        });
+
+        it('when onBeforeLeave returns a redirect, the redirect target is rendered and activated', async() => {
+          router.setRoutes([
+            {path: '/', action: onBeforeLeaveAction('x-home-view', context => context.redirect('/test'))},
+            {path: '/users', component: 'x-users-list'},
+            {path: '/test', component: 'x-image-view'}
+          ]);
+
+          await router.render('/');
+          await router.render('/users');
+
+          expect(outlet.children[0].tagName).to.match(/x-image-view/i);
+          verifyActiveRoutes(router, ['/test']);
+        });
+
+        it('when onBeforeEnter returns cancel and there is no previous state, an error is thrown', async() => {
+          const path = '/';
+          router.setRoutes([
+            {path: path, action: onBeforeEnterAction('whatever', context => context.cancel())},
+          ]);
+
+          let exceptionThrown = false;
+          try {
+            await router.render(path);
+          } catch (e) {
+            expect(e.message).to.contain(path);
+            exceptionThrown = true;
+          }
+          expect(exceptionThrown).to.equal(true);
+        });
+
+        it('when onBeforeEnter returns cancel, resolution is aborted and reverted to the previous state', async() => {
+          router.setRoutes([
+            {path: '/', action: onBeforeEnterAction('whatever', context => context.cancel())},
+            {path: '/users', component: 'x-users-list'}
+          ]);
+
+          await router.render('/users');
+          await router.render('/');
+
+          expect(outlet.children[0].tagName).to.match(/x-users-list/i);
+          verifyActiveRoutes(router, ['/users']);
+        });
+
+        it('when onBeforeLeave returns cancel, resolution is aborted and reverted to the previous state', async() => {
+          router.setRoutes([
+            {path: '/', action: onBeforeLeaveAction('x-home-view', context => context.cancel())},
+            {path: '/users', component: 'x-users-list'},
+          ]);
+
+          await router.render('/');
+          await router.render('/users');
+
+          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          verifyActiveRoutes(router, []);
+        });
+
+        it('inactivate overrides onBeforeEnter', async() => {
+          router.setRoutes([
+            {path: '/a', children: [
+              {path: '/b', inactivate: context => context.cancel(), children: [
+                {path: '/c', component: 'x-home-view'}
+              ]},
+            ]},
+            {path: '/d', action: onBeforeEnterAction('x-users-list', context => context.component('x-image-view'))},
+          ]);
+
+          await router.render('/a/b/c');
+          await router.render('/d');
+
+          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          verifyActiveRoutes(router, ['/a', '/b', '/c']);
+        });
+
+        it('inactivate overrides onBeforeEnter for same route but shorter', async() => {
+          const actionToEmulateShorterResolvePass = context => {
+            if ((context.pathname.match(/\//g) || []).length < 2) {
+              const component = context.component('x-home-view');
+              component.onBeforeEnter = context => context.component('x-image-view');
+              return component;
+            }
+          };
+          router.setRoutes([
+            {path: '/a', action: actionToEmulateShorterResolvePass, children: [
+              {path: '/b', component: 'x-users-view', inactivate: context => context.cancel()},
+            ]},
+          ]);
+
+          await router.render('/a/b');
+          await router.render('/a');
+
+          expect(outlet.children[0].tagName).to.match(/x-users-view/i);
+          verifyActiveRoutes(router, ['/a', '/b']);
+        });
+
+        it('onBeforeLeave overrides inactivate', async() => {
+          const inactivate = sinon.spy();
+          router.setRoutes([
+            {path: '/a', children: [
+              {path: '/b', inactivate: inactivate, children: [
+                {path: '/c', action: onBeforeLeaveAction('x-home-view', context => context.component('x-image-view'))}
+              ]},
+            ]},
+            {path: '/d', component: 'x-users-list'},
+          ]);
+
+          await router.render('/a/b/c');
+          await router.render('/d');
+
+          expect(inactivate).to.not.have.been.called;
+          expect(outlet.children[0].tagName).to.match(/x-image-view/i);
+          verifyActiveRoutes(router, ['/a', '/b']);
+        });
+
+        it('onBeforeLeave overrides inactivate for same route but shorter', async() => {
+          const inactivate = sinon.spy();
+          const actionToEmulateShorterResolvePass = context => {
+            if ((context.pathname.match(/\//g) || []).length < 2) {
+              return context.component('x-home-view');
+            }
+          };
+          router.setRoutes([
+            {path: '/a', action: actionToEmulateShorterResolvePass, children: [
+              {path: '/b', inactivate: inactivate, action: onBeforeLeaveAction('x-users-view', context => context.component('x-image-view'))},
+            ]},
+          ]);
+
+          await router.render('/a/b');
+          await router.render('/a');
+
+          expect(inactivate).to.not.have.been.called;
+          expect(outlet.children[0].tagName).to.match(/x-image-view/i);
+          verifyActiveRoutes(router, ['/a']);
+        });
+      });
+
+      describe('redirect.from and context.from values for dynamic redirects', () => {
+        let router;
+        beforeEach(() => {
+          router = new Vaadin.Router(outlet);
+        });
+
+        afterEach(() => {
+          router.unsubscribe();
+        });
+
+        const from = '/a/b/c';
+        const redirectFunction = context => {
+          const redirectObject = context.redirect('/d');
+          expect(redirectObject.redirect.from).to.be.equal(from);
+          return redirectObject;
+        };
+        const verificationAction = context => {
+          expect(context.from).to.be.equal(from);
+        };
+
+        it('action with redirect has its context.from and redirect.from populated correctly', async() => {
+          router.setRoutes([
+            {path: '/a', children: [
+              {path: '/b', children: [
+                {path: '/c', action: redirectFunction}
+              ]},
+            ]},
+            {path: '/d', component: 'x-home-view', action: verificationAction}
+          ]);
+
+          await router.render(from);
+
+          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+        });
+
         it('action with redirect gets double slashes removed from its context.from and redirect.from', async() => {
           let from = '';
           router.setRoutes([
@@ -413,6 +764,22 @@
         });
       });
     });
+
+    function onBeforeLeaveAction(componentName, callback) {
+      return context => {
+        const component = context.component(componentName);
+        component.onBeforeLeave = callback;
+        return component;
+      };
+    }
+
+    function onBeforeEnterAction(componentName, callback) {
+      return context => {
+        const component = context.component(componentName);
+        component.onBeforeEnter = callback;
+        return component;
+      };
+    }
 
     function verifyActiveRoutes(router, expectedSegments) {
       expect(router.__previousContext.chain.map(route => route.path)).to.deep.equal(expectedSegments);
