--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -56,6 +56,11 @@
             });
           });
 
+          it('route should throw when created with only path property', () => {
+            const router = new Vaadin.Router(outlet);
+            expect(() => router.setRoutes([{path: '/'}])).to.throw(Error);
+          });
+
           it('route should throw when created with unknown bundle type', () => {
             const router = new Vaadin.Router(outlet);
             expect(() => router.setRoutes([{path: '/', bundle: () => {}}])).to.throw(Error);
@@ -561,7 +566,7 @@
               {path: '/', component: 'x-home-view', bundle: nonExistingPath},
             ]);
 
-            await expectException(router.render('/'));
+            await expectException(router.render('/'), ['Bundle not found']);
             expect(getBundleScripts(nonExistingPath).length).to.equal(0);
           });
 
