define the list of supported browsers and run tests on all of them
 - use browserslist and babel-preset-env to defined the list of supported browsers
 - upgrade to the latest WCT and polymer-cli to make tests run in older browsers (the tests use async/await and require transpilation)
 - pin the version of polyserve to 0.27.8 to avoid the issue with source maps when running the tests / demos locally (see https://github.com/Polymer/tools/issues/389)
 - add throttling for pushState / replaceState methods to avoid hitting browser-set limits in Safari and Chrome

--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -6,9 +6,12 @@
   <script src="../../bower_components/web-component-tester/browser.js"></script>
   <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../dist/vaadin-router.umd.js"></script>
+
+  <link rel="import" href="../test-pushstate-throttler.html">
 </head>
 
 <body>
+  <test-pushstate-throttler id="throttler"></test-pushstate-throttler>
   <a id="admin-anchor" href="/admin"></a>
   <test-fixture id="outlet">
     <template>
@@ -28,6 +31,11 @@
 
         // stamp the test fixture DOM into the page
         outlet = fixture('outlet');
+      });
+
+      const throttler = document.querySelector('#throttler');
+      afterEach(function() {
+        return throttler.throttle(this);
       });
 
       describe('JS API (basic functionality)', () => {
