--- a/test/router/dynamic.redirect.spec.html
+++ b/test/router/dynamic.redirect.spec.html
@@ -6,9 +6,12 @@
   <script src="../../bower_components/web-component-tester/browser.js"></script>
   <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../dist/vaadin-router.umd.js"></script>
+
+  <link rel="import" href="../test-pushstate-throttler.html">
 </head>
 
 <body>
+  <test-pushstate-throttler id="throttler"></test-pushstate-throttler>
   <test-fixture id="outlet">
     <template>
       <div></div>
@@ -27,6 +30,11 @@
 
         // stamp the test fixture DOM into the page
         outlet = fixture('outlet');
+      });
+
+      const throttler = document.querySelector('#throttler');
+      afterEach(function() {
+        return throttler.throttle(this);
       });
 
       describe('active routes', () => {
